# CRE-Knowledge-Engine

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  alembic.ini  docker-compose.yml  opencode.json  pyproject.toml
alembic/: env.py
app/: cli.py  main.py
docs/: ambitious-scope-council-review.md  architecture-council-review.md  assignment-brief.md  cre-data-dictionary.md  delivery-plan.md  final-implementation-spec.md  first-run-implementation-plan.md  large-corpus-and-rich-property-schema-plan.md  pre-agent-mode-audit-and-next-level-ideas.md  pre-toolhouse-gap-checklist.md  production-practices-council-review.md  production-practices.md  retrieval-routing-spec.md  sample-data-and-evaluation.md  slack-demo-persona-sheet.md  slack-demo-runbook.md  slack-demo-video-script.md  slack-toolhouse-integration.md  toolhouse-agent-design-and-prompt.md  toolhouse-readiness-checkpoint.md  toolhouse-system-prompt.md  toolhouse-upload-checklist.md
ideation-docs/: ideation-part-1.md  ideation-part-2.md  ideation-part-3.md  ideation-part-4.md  ideation-part-5.md  ideation-part-6.md  ideation-part-7-execution-synthesis.md
problem-statement/: Take Home Assigment.txt
sample-data/: README.md  import-manifest.json
scripts/: recover-demo-stack.sh
tests/: conftest.py  test_cli.py  test_demo_battery.py  test_health.py  test_hybrid_retrieval_stack.py  test_instant_answers.py  test_native_parsers.py  test_sample_corpus.py  test_scaffold_golden.py  test_slack_demo_files.py  test_slack_demo_sync.py  test_slack_loop.py  test_submission_readiness.py  test_toolhouse_client.py  (+2 more)
(+117 files in other folders)
