[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "cre-knowledge-engine"
version = "0.1.0"
description = "Slack-native CRE knowledge engine scaffold."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiohttp>=3.10,<4.0",
    "alembic>=1.13,<2.0",
    "asyncpg>=0.29,<1.0",
    "bm25s>=0.3.9",
    "fastapi>=0.115,<1.0",
    "mcp>=1.9,<2.0",
    "openpyxl>=3.1,<4.0",
    "polyfuzz>=0.4.3",
    "pydantic-settings>=2.4,<3.0",
    "pypdf>=5.0,<6.0",
    "scikit-learn>=1.8.0",
    "slack-bolt>=1.21,<2.0",
    "sqlalchemy>=2.0.36,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.scripts]
cre-cli = "app.cli:main"

[dependency-groups]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.3,<9.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.wheel.force-include]
"app/retrieval/retrieval_config.json" = "app/retrieval/retrieval_config.json"

[tool.pytest.ini_options]
markers = [
    "golden: scaffold and golden-path smoke tests",
]
testpaths = ["tests"]

